name:                http-client-destroy
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/neongreen/http-client-destroy#readme
license:             BSD3
license-file:        LICENSE
author:              Artyom Kazak
maintainer:          yom@artyom.me
copyright:           Artyom Kazak
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable http-client-destroy
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , http-client
                     , bytestring
                     , resourcet
                     , conduit
                     , http-conduit
                     , unliftio
